--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.soc7.myapplication" >
+    package="com.example.soc7.myapplication">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,12 +18,11 @@
         </activity>
         <activity
             android:name=".Generator"
-            android:label="@string/title_activity_generator" >
-        </activity>
+            android:label="@string/title_activity_generator"></activity>
         <activity
             android:name=".Registration"
-            android:label="@string/title_activity_registration" >
-        </activity>
+            android:label="@string/title_activity_registration"></activity>
+        <activity android:name=".weekly_plan"></activity>
     </application>
 
 </manifest>
